--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-modal-video": "^1.2.3",
-    "react-scripts": "3.4.1"
+    "react-modal-video": "^1.2.6",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
